tools/crates/vendor/toml_edit-0.19.15/tests/fixtures/invalid/table/rrbrace.stderr
TOML parse error at line 1, column 8
  |
1 | [[table] ]
  |        ^
invalid table header
expected `.`, `]]`
